Zmiana koloru tla

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 <body>
     <header>
         <nav>
-            <a href="/" class="logo">📚 FactsHub - wersja live</a>
+            <a href="/" class="logo">📚 FactsHub </a>
             <div class="nav-links">
                 <a href="/">Strona Główna</a>
                 <a href="/archive">Archiwum</a>
